--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-	"name": "my-vue-app",
-	"version": "0.0.0",
+	"name": "project",
+	"private": true,
+	"version": "1.0.0",
 	"scripts": {
 		"dev": "vite",
 		"build": "vite build",
